--- a/templates/login/login.html
+++ b/templates/login/login.html
@@ -19,7 +19,7 @@
             <div class="alert alert-{{ message.tags }}" style="display: block;">
                 <strong></strong> {{ message }}
                 <div class="imgcss">
-                    <img src="static/home/CSS.png">
+                    <img src="static/home/adminhome/CSS.png">
                     <h2>COLLEGE OF <br></h2>
                     <p>COMPUTER STUDIES</p>
 
