--- a/static/home/homestyle.css
+++ b/static/home/homestyle.css
@@ -355,16 +355,6 @@ html{
  }
 
  .categories {
-    background-color: #f8f9fa;
-    padding: 15px 0;
-    border: 2px solid #dee2e6;
-    border-bottom: 1px solid #dee2e6;
-    box-shadow: 2px 2px 3px 3px rgba(0, 0, 0, 0.1);
-    margin: 30px 70px 0; /* Adjusted margin for better responsiveness */
-    border-radius: 15px;
-  }
-
- .categories {
   display: grid;
   grid-template-columns: auto auto auto auto auto;
   gap: 10px;
@@ -394,7 +384,7 @@ html{
   padding: auto;
 } 
 
-.form-item .items{
+.category_div {
   text-align: center;
   padding:1.5rem;
   background: #fff;
