--- a/static/home/homestyle.css
+++ b/static/home/homestyle.css
@@ -283,6 +283,15 @@ html{
    border-radius: 4px;
  }
 
+ nav {
+   background-color: #f8f9fa;
+   padding: 15px 0;
+   border-bottom: 1px solid #dee2e6;
+   box-shadow: 2px 2px 3px 3px rgba(0, 0, 0, 0.1);
+   margin: 30px 70px 0; /* Adjusted margin for better responsiveness */
+   border-radius: 15px;
+ }
+
  .navbar-brand {
    color: black;
    font-weight: bold;
@@ -398,7 +407,17 @@ html{
    margin-top: 15px;
  }
 
- .categories{
+ .containers {
+    text-align: center;
+    padding: 20px 0;
+    background: #fff;
+    box-shadow: 0 .5rem 1rem rgba(0,0,0,.1);  
+    outline: .1rem solid #ccc;
+    outline-offset: 0;
+    cursor: pointer;
+  }
+
+ .categories {
   text-align: center;
   padding: 20px 0;
   background: #fff;
