--- a/templates/members/members.html
+++ b/templates/members/members.html
@@ -32,5 +32,12 @@
             </div>
         </nav>
         {% include 'home/result_list_admin.html' %}
+
+        <div class="square-container">
+             <p class="details"> Name <br/>
+                Details </p> 
+             <p ></p>  
+
+        </div>
     </body>
 </html>
