--- a/static/userprofile/userprofile.css
+++ b/static/userprofile/userprofile.css
@@ -128,20 +128,20 @@ body {
     margin-left: auto;
   }
   
-  .search-bar {
+  .search-bar form{
     flex-grow: 1;
-    margin-left: 2%;
+    margin-left: 0%;
     display: flex;
     align-items: center;
   }
 
   .search-bar input[type=text]{
-    width: 300%; /* Adjusted to take 100% width on smaller screens */
+    width: 800px;
     padding: 8px;
     font-size: 16px;
     border: none;
     border-radius: 4px;
-    
+    flex: 1;
   }
 
   .search-bar button[type=submit]{
@@ -150,7 +150,7 @@ body {
     font-size: 16px;
     border: 1px solid gray;
     border-radius: 4px;
-    
+    margin-left: 8px;
   }
 
   .search-bar button:hover{
