--- a/static/home/homeadminstyle.css
+++ b/static/home/homeadminstyle.css
@@ -271,16 +271,6 @@ body {
     margin-left: auto;
   }
   
-  .search-bar {
-    flex-grow: 1;
-    margin-left: 2%;
-}
-
-.search-form {
-    display: flex;
-    align-items: center;
-}
-
 input[name="q"] {
     width: 90%;
     padding: 6px;
@@ -290,12 +280,6 @@ input[name="q"] {
     margin-right: 14px;
 }
 
-.searchbb {
-    color: firebrick;
-    font-size: 18px;
-    cursor: pointer;
-}
-  
   /* navigations */
   nav {
     background-color: #f8f9fa;
@@ -1708,25 +1692,54 @@ button:hover {
   background-color: rgb(255, 255, 255);
   flex-shrink: 0;
 }
+
+.middle-section {
+  flex: 1;
+  margin-left: 10px;
+  margin-right: 10px;
+  display: flex;
+  align-items: center;
+}
+
+.search-bar {
+  flex: 1;
+  height: 14px;
+  padding: 10px;
+  margin: 5px;
+  border: none;
+  border-radius: 3px;
+  outline: none;
+  background-color: white;
+  color: #000000; /* Set text color to be visible on the background color */
+  font-size: 15px;
+  box-shadow: inset 1px 2px 5px rgba(0, 0, 0, 0.2);
+  width: 0;
+}
+
+.search-bar::placeholder{
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 15px;
+}
+
+.search-button {
+  background-color: rgb(230,124,55); /* Set the submit button color */
+  color: #ffffff;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 3px;
+  margin-right: 10px;
+  cursor: pointer;
+} 
+
+.search-button:hover  {
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
+}
+
   /* Media queries for responsiveness */
   @media screen and (max-width: 768px) {
     header {
       flex-direction: column;
       align-items: flex-start;
-    }
-  
-    .search-bar {
-      margin-top: 10px;
-      margin-left: 0;
-    }
-  
-    .search-input {
-      width: 100%;
-    }
-  
-    .fa-search {
-    margin-left: 0;
-      
     }
   
     .logo.left,
