--- a/static/home/homestyle.css
+++ b/static/home/homestyle.css
@@ -344,7 +344,7 @@ html{
     text-align: left;
  }
 
-.head .containers {
+.head {
    background-color: #f8f9fa;
    padding: 15px 0;
    border: 2px solid #dee2e6;
