--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -10,7 +10,7 @@
     <body>
 
         {% if user.is_authenticated %}
-        <h1>>Welcome, {{ user.username }}</h1>
+        <h1>Welcome, {{ user.username }}</h1>
     {% endif %}
 
         <header>
