--- a/templates/notification/notification.html
+++ b/templates/notification/notification.html
@@ -38,7 +38,7 @@
       <span class="notification-indicator">!</span>
       {% endif %}
       <a href="{% url 'userprofile' %}" class="navbar-brand">Account</a>
-      <a href="{% url 'logout' %}">Logout</a>
+      <a href="{% url 'logout' %}" class="navbar-brand">Logout</a>
    </div>
 </nav>
 {% include 'home/result_list.html' %}
