--- a/static/notification/notificationstyle.css
+++ b/static/notification/notificationstyle.css
@@ -198,7 +198,8 @@ html{
     font-size: 35px;
     line-height: 41.83px;
     text-align: right;
-    margin-left: 10rem;
+    margin-left: 5rem;
+    margin-top: -10rem;
  }
  .form-item {
     background-color: #f8f9fa;
