--- a/templates/home/admin_home.html
+++ b/templates/home/admin_home.html
@@ -6,22 +6,24 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
         <title>ADMIN HOME</title>
     <body>
-        <header>
+        
+            <div class="header">
             <div class="logo left">
                 <img src="/static/home/adminhome/LSPU.png" alt="Left Logo">
             </div>
             
             <div class="middle-section">
-                <form method="GET" action="{% url 'search_items_admin' %}">
+                <form method="GET" action="{% url 'search_items_admin' %}" class="search-form">
                     <input class="search-bar" type="text" name="q" value="{{ query }}" placeholder="Search for name/id/category">
-                    <button class="search-button" type="submit">Search</button>
+                    <input class="search-button" type="submit" value="Search" name="b">
                 </form>
             </div>
 
             <div class="logo right">
                 <img src="/static/home/adminhome/CSS.png" alt="Right Logo">
             </div> 
-        </header>
+            </div>
+
         <div class="head"></div>
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container">
