--- a/templates/userprofile/userprofile.html
+++ b/templates/userprofile/userprofile.html
@@ -15,7 +15,7 @@
           <div class="search">
             <form method="GET" action="{% url 'search_items' %}">
               <input type="text" name="q" value="{{ query }}" placeholder="Search for name/id/category" style="width: 1046px;height: 30px;left: 187px;border-radius: 10px;border: 4px;">
-              <button type="submit" style="margin-left: 900px; margin-top: 50px;">Search</button>
+              <button type="submit" style="margin-left: 900px; top: 10px;">Search</button>
             </form>
          </div>
   
