--- a/templates/userprofile/userprofile.html
+++ b/templates/userprofile/userprofile.html
@@ -14,8 +14,8 @@
           
           <div class="search">
             <form method="GET" action="{% url 'search_items' %}">
-              <input type="text" name="q" value="{{ query }}" placeholder="Search for name/id/category" style="width: 1046px;height: 30px;left: 187px;border-radius: 10px;border: 4px;">
-              <button type="submit" style="margin-left: 1000px; margin-bottom: 10px;">Search</button>
+              <input type="text" name="q" value="{{ query }}" placeholder="Search for name/id/category" style="width: 1046px;height: 30px;left: 187px;border-radius: 10px;border: 4px;margin-bottom: 5px;">
+              <button type="submit" style="margin-left: 1000px;">Search</button>
             </form>
          </div>
   
