--- a/templates/userprofile/userprofile.html
+++ b/templates/userprofile/userprofile.html
@@ -14,8 +14,8 @@
           
           <div class="search">
             <form method="GET" action="{% url 'search_items' %}">
-              <input type="text" name="q" value="{{ query }}" placeholder="Search for name/id/category" style="width: 950px;height: 30px;left: 187px;border-radius: 10px;border: 4px;margin-top: 10px;">
-              <button type="submit" style="margin-left: 960px; margin-top: 50px;">Search</button>
+              <input type="text" name="q" value="{{ query }}" placeholder="Search for name/id/category" style="width: 950px;height: 30px;left: 187px;border-radius: 10px;border: 4px;margin-top: 15px;">
+              <button type="submit" style="margin-left: 960px;">Search</button>
             </form>
          </div>
   
