--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -3,6 +3,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="{% static '\home\homestyle.css' %}">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>FACULTY HOME</title>
     </head>
     <h1>FACULTY HOME</h1>
