--- a/static/home/homestyle.css
+++ b/static/home/homestyle.css
@@ -346,7 +346,7 @@ html{
     text-align: left;
  }
 
-.form{
+.categories {
    background-color: #f8f9fa;
    padding: 15px 0;
    border: 2px solid #dee2e6;
