--- a/static/userprofile/userprofile.css
+++ b/static/userprofile/userprofile.css
@@ -187,18 +187,14 @@ html{
     padding: auto;
  }
  
- p{
+ p h2{
     font-family: orienta;
     font-weight: bold;
     text-align: left;
     margin-top: -10rem;
     margin-left: 15rem;
  }
- 
-h2{
-   margin-top: 10rem;
-   margin-left: -15rem;
-}
+
 .pic{
     margin-left: 5rem;
 }
