--- a/static/home/homestyle.css
+++ b/static/home/homestyle.css
@@ -363,7 +363,7 @@ html{
   padding: 10px;
 }
 
- .item-form-item {
+ .categories {
   background-color: #f8f9fa;
   padding: 10px 0;
   border-bottom: 1px solid black;
@@ -375,7 +375,7 @@ html{
   
 }
 
- .form-items{
+ .categories {
   background-color: #f8f9fa;
   padding: 10px 0;
   border-bottom: 1px solid black;
