--- a/static/home/homestyle.css
+++ b/static/home/homestyle.css
@@ -375,7 +375,7 @@ html{
   
 }
 
- .categories {
+ .form-items{
   background-color: #f8f9fa;
   padding: 10px 0;
   border-bottom: 1px solid black;
