--- a/templates/userprofile/userprofile.html
+++ b/templates/userprofile/userprofile.html
@@ -34,7 +34,7 @@
                <a href="{% url 'unreturned' %}" class="navbar-brand">Unreturned</a>
                <a href="{% url 'notification' %}" class="navbar-brand">Notifications</a>
                <a href="{% url 'userprofile' %}" class="navbar-brand">Account</a>
-               <button><a href="{% url 'logout' %}">Logout</a></button>
+               <a href="{% url 'logout' %}" class="navbar-brand">Logout</a>
             </div>
          </nav>
        
