--- a/static/home/homestyle.css
+++ b/static/home/homestyle.css
@@ -246,7 +246,7 @@ html{
     background: #eee;
  }
 
- .header {
+ header {
     background-color: #7a1a22;
     height: 100px;;
     width: 1500px;
@@ -255,7 +255,7 @@ html{
     align-items: center;
  }
 
- .head {
+ head {
     display: flex;
    background-color:#E67C37;
    padding: 10px;
