--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -26,6 +26,9 @@
           <div class="search-bar">
             <input type="text" name="q" value="{{ query }}" placeholder="Search for name/id/category">
             <button type="submit">Search</button>
+            <input type="text" class="search-input" placeholder="Search...">
+        <i class="fas fa-search"></i>
+
             </div>
           </form>
           <div class="right">
