--- a/templates/userprofile/userprofile.html
+++ b/templates/userprofile/userprofile.html
@@ -42,23 +42,22 @@
         <div id="main" class="form">
          <div class="item">
             <div class="pic">
-        <div style="display: flex; align-items: center; margin-top: -150px;">
-            <img class="rounded-circle account-img" src="{{ user.profile.image.url }}" alt="Profile Image" style="max-width: 200px; max-height: 200px; object-fit: cover; border-radius: 50%;">
-         </div>
-          
+              <div style="display: flex; align-items: center; margin-top: -150px;">
+                <img class="rounded-circle account-img" src="{{ user.profile.image.url }}" alt="Profile Image" style="max-width: 200px; max-height: 200px; object-fit: cover; border-radius: 50%;">
+              </div>
+            </div>
+
+         <div id="main" class="form">
             <div style="margin-left: 20px;">
               <h2 class="account-heading">{{ user.username }}</h2>
                     <p class="text-secondary" style="margin-top: 10px;">Account Name: {{ user.profile.account_name }}</p>
                     <p class="text-secondary" style="margin-top: 10px;">Email: {{ user.email }}</p>
                     <p class="text-secondary" style="margin-top: 10px;">Contact Number: {{ user.profile.contact_number }}</p>
  
-
                     <button><a href="{% url 'editprofile' %}">Edit Profile</a></button>
-              </div>
-               </div>
             </div>
-        </div>
-
+          </div>
+         </div>
             <style>
                 .form-container {
                     margin-top: 20px; /* Adjust the margin as needed */
