--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -24,9 +24,9 @@
 
           <form method="GET" action="{% url 'search_items' %}"></form>
           <div class="search-bar">
-            <input type="text" name="q" value="{{ query }}" placeholder="Search for name/id/category">
+            <input type="text" name="q" value="{{ query }}" class="search-input" placeholder="Search for name/id/category">
             <button type="submit">Search</button>
-            <input type="text" class="search-input" placeholder="Search...">
+            
         <i class="fas fa-search"></i>
 
             </div>
