--- a/static/home/homestyle.css
+++ b/static/home/homestyle.css
@@ -249,7 +249,7 @@ html{
  header {
     background-color: #7a1a22;
     height: 100px;;
-    width: 1300px;
+    width: 1350px;
     flex-grow: 1;
     display: flex;
     align-items: center;
@@ -288,38 +288,30 @@ html{
  }
 
  nav {
-   background-color: #f8f9fa;
-   padding: 15px 0;
-   border-bottom: 1px solid #dee2e6;
-   box-shadow: 2px 2px 3px 3px rgba(0, 0, 0, 0.1);
-   margin: 30px 70px 0; /* Adjusted margin for better responsiveness */
-   border-radius: 15px;
+    background-color: #f8f9fa;
+    padding: 15px 0;
+    border-bottom: 1px solid #dee2e6;
+    box-shadow: 2px 2px 3px 3px rgba(0, 0, 0, 0.1);
+    margin: 30px 70px 0; /* Adjusted margin for better responsiveness */
+    border-radius: 15px;
  }
 
  .navbar-brand {
-   color: black;
-   font-weight: bold;
-   font-size: 2rem;
-   margin-right: 10px;
-   margin-left: 10px;
-   text-decoration: none; /* Remove underline */
-   position: relative; /* Position for the pseudo-element */
-   transition: color 0.3s ease, font-weight 0.3s ease; /* Add a smooth color and font weight transition */
-   gap: 10px;
+    color: black;
+    font-weight: bold;
+    font-size: 1.5rem;
+    margin-right: 10px;
+    margin-left: 10px;
+    padding: 4rem;
+    text-decoration: none; /* Remove underline */
+    position: relative; /* Position for the pseudo-element */
+    transition: color 0.3s ease, font-weight 0.3s ease; /* Add a smooth color and font weight transition */
  }
  
  /* Create an underline pseudo-element */
  .navbar-brand::before {
-   content: '';
-   position: absolute;
-   width: 100%;
-   height: 2px;
-   bottom: 0;
-   left: 0;
-   background-color: firebrick; /* Initial underline color */
-   visibility: hidden;
-   transform: scaleX(0); /* Initially invisible */
-   transition: all 0.3s ease; /* Add a smooth transition for visibility and scale */
+    visibility: visible;
+    transform: scaleX(1); /* Make the underline visible and scale it */
  }
  
  /* Add hover effect */
