--- a/templates/userprofile/userprofile.html
+++ b/templates/userprofile/userprofile.html
@@ -47,7 +47,7 @@
               </div>
             </div>
 
-         <div id="main" class="form">
+         <div id="main" class="form1">
             <div style="margin-left: 20px;">
               <h2 class="account-heading">{{ user.username }}</h2>
                     <p class="text-secondary" style="margin-top: 10px;">Account Name: {{ user.profile.account_name }}</p>
