--- a/static/userprofile/userprofile.css
+++ b/static/userprofile/userprofile.css
@@ -193,7 +193,7 @@ html{
     text-align: left;
  }
  
-.form{
+.form1{
    background-color: #f8f9fa;
    padding: 1rem 0;
    margin: 30px 70px 0; /* Adjusted margin for better responsiveness */
