--- a/static/home/homestyle.css
+++ b/static/home/homestyle.css
@@ -350,7 +350,7 @@ html{
    border-radius: 15px;
  }
 
- .form-item {
+ .categories {
   display: grid;
   grid-template-columns: auto auto auto auto auto;
   gap: 10px;
