--- a/static/home/homestyle.css
+++ b/static/home/homestyle.css
@@ -310,8 +310,16 @@ html{
  
  /* Create an underline pseudo-element */
  .navbar-brand::before {
-    visibility: visible;
-    transform: scaleX(1); /* Make the underline visible and scale it */
+    content: '';
+   position: absolute;
+   width: 100%;
+   height: 2px;
+   bottom: 0;
+   left: 0;
+   background-color: firebrick; /* Initial underline color */
+   visibility: hidden;
+   transform: scaleX(0); /* Initially invisible */
+   transition: all 0.3s ease; 
  }
  
  /* Add hover effect */
