--- a/templates/home/admin_home.html
+++ b/templates/home/admin_home.html
@@ -25,7 +25,7 @@
             </div>
 
         <div class="head"></div>
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
                 <div class="container">
                     <a href="{% url 'admin_home' %}" class="navbar-brand">Home</a>
                     <a href="{% url 'admin_recents' %}" class="navbar-brand">Recents</a>
