--- a/static/home/homestyle.css
+++ b/static/home/homestyle.css
@@ -302,11 +302,10 @@ html{
    font-size: 2rem;
    margin-right: 10px;
    margin-left: 10px;
+   padding: 4rem;
    text-decoration: none; /* Remove underline */
    position: relative; /* Position for the pseudo-element */
    transition: color 0.3s ease, font-weight 0.3s ease; /* Add a smooth color and font weight transition */
-   gap: 10px;
-
  }
  
  /* Create an underline pseudo-element */
