--- a/static/userprofile/userprofile.css
+++ b/static/userprofile/userprofile.css
@@ -188,7 +188,7 @@ html{
  }
  
  .info h2{
-   margin-top: -.5rem;
+   margin-top: .5rem;
    margin-left: 18rem;
  }
 
@@ -196,7 +196,7 @@ html{
     font-family: orienta;
     font-weight: bold;
     text-align: left;
-    margin-top: -.5rem;
+    margin-top: .5rem;
     margin-left: 18rem;
  }
  
