--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -14,7 +14,7 @@
           <div class="logo-cont"></div>
     
           <div class="left">
-            <img src="media\logo\LSPU.png" alt="">
+            <img src="static\home\logos\LSPU.png" alt="">
           </div>
 
           <form method="GET" action="{% url 'search_items' %}"></form>
@@ -28,7 +28,7 @@
           </form>
           <div class="right">
           <div class="logo-cont"></div>
-            <img src="media\logo\ccs.png" alt="">
+            <img src="static\home\logos\ccs.png" alt="">
           </div>
     
         </header>
