--- a/static/home/homestyle.css
+++ b/static/home/homestyle.css
@@ -378,7 +378,7 @@ html{
   
 }
 
- .form-items{
+ .categories {
   background-color: #f8f9fa;
   padding: 10px 0;
   border-bottom: 1px solid black;
