--- a/templates/userprofile/userprofile.html
+++ b/templates/userprofile/userprofile.html
@@ -54,7 +54,9 @@
                     <p class="text-secondary" style="margin-top: 10px;">Email: {{ user.email }}</p>
                     <p class="text-secondary" style="margin-top: 10px;">Contact Number: {{ user.profile.contact_number }}</p>
  
-                    <button><a href="{% url 'editprofile' %}">Edit Profile</a></button>
+                    <div class="btn">
+                      <button><a href="{% url 'editprofile' %}">Edit Profile</a></button>
+                    </div>
             </div>
           </div>
          </div>
