--- a/static/userprofile/userprofile.css
+++ b/static/userprofile/userprofile.css
@@ -202,7 +202,7 @@ margin-top: 1rem;
 
  p{
     font-family: orienta;
-    font-weight: bold;
+    font-weight:lighter;
     text-align: left;
     margin-top: .5rem;
     margin-left: 18rem;
