--- a/static/home/homestyle.css
+++ b/static/home/homestyle.css
@@ -287,16 +287,6 @@ html{
    border-radius: 4px;
  }
 
- .containers {
-    background-color: #f8f9fa;
-    padding: 15px 0;
-    border: 2px solid #dee2e6;
-    border-bottom: 1px solid #dee2e6;
-    box-shadow: 2px 2px 3px 3px rgba(0, 0, 0, 0.1);
-    margin: 30px 70px 0; /* Adjusted margin for better responsiveness */
-    border-radius: 15px;
-  }
-
  nav {
     background-color: #f8f9fa;
     padding: 15px 0;
@@ -305,6 +295,16 @@ html{
     margin: 30px 70px 0; /* Adjusted margin for better responsiveness */
     border-radius: 15px;
  }
+
+ nav .nav{
+    background-color: #f8f9fa;
+    padding: 15px 0;
+    border: 2px solid #dee2e6;
+    border-bottom: 1px solid #dee2e6;
+    box-shadow: 2px 2px 3px 3px rgba(0, 0, 0, 0.1);
+    margin: 30px 70px 0; /* Adjusted margin for better responsiveness */
+    border-radius: 15px;
+  }
 
  .navbar-brand {
     text-align: center;
