--- a/templates/userprofile/editprofile.html
+++ b/templates/userprofile/editprofile.html
@@ -7,6 +7,37 @@
     </head>
     <h1>ADMIN / USER PROFILE</h1>
 <body>
+    <header>
+        <div class="header">
+          <div class="logo-left">
+           <img src="media\logo\lspu-logo.png" alt="LSPU Logo">
+          </div>
+          
+          <div class="search">
+            <form method="GET" action="{% url 'search_items' %}">
+              <input type="text" name="q" value="{{ query }}" placeholder="Search for name/id/category" style="width: 950px;height: 30px;left: 187px;border-radius: 10px;border: 4px;margin-top: 15px;">
+              <button type="submit" style="margin-left: 960px;">Search</button>
+            </form>
+         </div>
+  
+           <div class="logo-right">
+              <img src="media\logo\ccs-logo.png" alt="CSS Logo">
+           </div>
+          
+        </div>
+      </header>
+      <div class="head"></div>
+
+          <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container">
+               <a href="{% url 'home' %}" class="navbar-brand">Home</a>
+               <a href="{% url 'recents' %}" class="navbar-brand">Recents</a>
+               <a href="{% url 'unreturned' %}" class="navbar-brand">Unreturned</a>
+               <a href="{% url 'notification' %}" class="navbar-brand">Notifications</a>
+               <a href="{% url 'userprofile' %}" class="navbar-brand">Account</a>
+               <a href="{% url 'logout' %}" class="navbar-brand">Logout</a>
+            </div>
+         </nav>
     <div class="form-container">
         <form method="POST" enctype="multipart/form-data">
             {% csrf_token %}
