--- a/templates/notification/notification.html
+++ b/templates/notification/notification.html
@@ -15,8 +15,10 @@
           </div>
           
           <div class="search">
-           <input type="text" class="search-input" placeholder="CLEANING MATERIALS" style="width: 1046px;height: 30px;left: 187px;border-radius: 10px;border: 4px;">
-           <i class="fas fa-search"></i>
+            <form method="GET" action="{% url 'search_items' %}">
+              <input type="text" name="q" value="{{ query }}" placeholder="Search for name/id/category" style="width: 950px;height: 30px;left: 187px;border-radius: 10px;border: 4px;margin-top: 15px;">
+              <button type="submit" style="margin-left: 960px;">Search</button>
+            </form>
          </div>
   
            <div class="logo-right">
@@ -25,6 +27,7 @@
           
         </div>
       </header>
+      <div class="head"></div>
       <div class="head"></div>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
    <div class="container">
