--- a/static/home/homestyle.css
+++ b/static/home/homestyle.css
@@ -349,9 +349,9 @@ html{
     text-align: left;
  }
 
-.head .containers {
+.head .containers .categories{
    background-color: #f8f9fa;
-   padding: 15px 0;
+   padding: 20px 0;
    border: 2px solid #dee2e6;
    border-bottom: 1px solid #dee2e6;
    box-shadow: 2px 2px 3px 3px rgba(0, 0, 0, 0.1);
