--- a/static/home/homestyle.css
+++ b/static/home/homestyle.css
@@ -412,7 +412,7 @@ html{
    margin-top: 15px;
  }
 
- .containers {
+ .categories {
   text-align: center;
   padding: 20px 0;
   background: #fff;
