--- a/static/home/homestyle.css
+++ b/static/home/homestyle.css
@@ -349,7 +349,7 @@ html{
     text-align: left;
  }
 
-   .categories{
+   .head {
    background-color: #f8f9fa;
    padding: 20px 0;
    border: 2px solid #dee2e6;
